--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -11,7 +11,8 @@ html {
 /* -----Global Styles----- */
 body {
   background-color:white;
-  font-family: "Alan Sans", sans-serif;
+	font-family: Georgia, 'Times New Roman', Times, serif; 
+  margin:0;
 }
 
 header.primary{
@@ -19,4 +20,20 @@ header.primary{
   color:#ffffff;
   text-align:center;
   text-shadow: 1px 1px #000000;
+    /*long form*/
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+    /*Single value short hand*/
+  padding: 40px;
+    /* T,R,B,L */
+  padding: 20px 40px 20px 40px;
+  /* Two Value Top/Bottom / L/R */
+  padding: 20px 40px;
+
+}
+
+header.primary h1{
+  
 }
