--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -35,5 +35,11 @@ header.primary{
 }
 
 header.primary h1{
-  
+  font-size:2.4rem;
+  color:#ffffff;
+}
+
+header.primary h1 a{  
+  color:#ffffff;
+  text-decoration:none;
 }
