--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -43,3 +43,8 @@ header.primary h1 a{
   color:#ffffff;
   text-decoration:none;
 }
+
+header.primary h2{
+  font-size:1.4rem;
+  letter-spacing:2px;
+}
