Update header styles: adjust h1 margin and change link color for better contrast

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -37,10 +37,11 @@ header.primary{
 header.primary h1{
   font-size:2.4rem;
   color:#ffffff;
+  margin:0;
 }
 
 header.primary h1 a{  
-  color:#ffffff;
+  color:#000000;
   text-decoration:none;
 }
 
