--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -10,12 +10,12 @@ html {
 }
 
 /*------utility classes ---------*/
-.container{
+/*.container{
   width: 80vw;
   background:rgb(176, 230, 255);
   max-width:960px;
   margin: 40px auto;
-}
+}*/
 
 
 /* -----Global Styles----- */
@@ -66,6 +66,9 @@ header.primary nav ul{
   display:flex;
   flex-direction:row;
   justify-content:space-around;
+  background:rgb(176, 230, 255);
+  max-width:960px;
+  margin: 20px auto;
 }
 header.primary nav li{
   list-style-type:none;
