--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -10,12 +10,17 @@ html {
 }
 
 /*------utility classes ---------*/
-/*.container{
-  width: 80vw;
-  background:rgb(176, 230, 255);
+.container{
+  width: 70vw;
   max-width:960px;
   margin: 40px auto;
-}*/
+}
+
+/*------responsive images ---------*/
+img{
+  max-width:100%;
+}
+
 
 
 /* -----Global Styles----- */
@@ -85,6 +90,41 @@ header.primary nav a{
 
 header.primary nav a:hover {
   background-color:rgba(0,0,0,.8);
+}
+
+#intro h2{
+  color:#EAB46D;
+border-bottom:1px dotted #c0c0c0;
+}
+
+#content{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-around;
+  gap:20px;
+}
+
+#content.post{
+  box-shadow:0 4px 8px rgba(0,0,0,.6);
+  padding:10px;
+  font-size:.8rem;
+}
+
+figure{
+  margin:0;
+}
+
+
+#content time, figcaption{
+  text-transform:uppercase;
+  font-size:.6rem;
+}
+/*figcaption{
+
+}*/
+
+#content a{
+    color:#EAB46D;
 }
 
 
