Fix typo in complementary aside role and update background color

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -127,9 +127,10 @@ figure{
     color:#EAB46D;
 }
 
-aside[role="complimentary"]{
-  background-color:brown;
-  color: #ffffff;
+aside[role="complementary"]{
+background: color #eb896e;;
+color: #ffffff;
+  padding:40px 0;
 }
 
 
