--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -128,7 +128,7 @@ figure{
 }
 
 aside[role="complementary"]{
-background: color #eb896e;;
+background-color: #eb896e;
 color: #ffffff;
   padding:40px 0;
 }
