Update background color of complementary aside for improved contrast

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -128,7 +128,7 @@ figure{
 }
 
 aside[role="complementary"]{
-background-color: #eb896e;
+background-color: #172635;
 color: #ffffff;
   padding:40px 0;
 }
