Update background color and add container styles for complementary aside

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -128,12 +128,17 @@ figure{
 }
 
 aside[role="complementary"]{
-  background-color: #172635;
+  background-color: #EB896E;
   color: #ffffff;
   padding:40px 0;
 }
 
-
+aside .container{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  gap:40px;
+}
 
 
 
