Update link styles in complementary aside container for last-child element

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -141,7 +141,7 @@ aside .container{
 }
 
 
-aside .container a{
+aside .container a:last-child{
   color:#ffffff;
   display:block;
   text-align: right;
