--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -140,9 +140,11 @@ aside .container{
   gap:40px;
 }
 
+aside .container a{
+  color:#ffffff;
+}
 
 aside .container a:last-child{
-  color:#ffffff;
   display:block;
   text-align: right;
   margin-top: 20px;  
