--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -16,6 +16,32 @@ html {
   margin: 40px auto;
 }
 
+.img-right{
+float: right;
+border: 1px solid #ccc;
+padding:5px;
+border-radius: 5px;
+margin: 10px 0 10px 20px;
+}
+
+.img-left{
+float: left;
+border: 1px solid #ccc;
+padding:5px;
+border-radius: 5px;
+margin: 10px 20px 10px 0;
+}
+
+.img-center{
+display: block;
+margin: 10px auto;
+border: 1px solid #ccc;
+padding:5px;
+border-radius: 5px;
+}
+
+
+
 /*------responsive images ---------*/
 img{
   max-width:100%;
@@ -136,7 +162,10 @@ figure{
   color:#EAB46D
 }
   
-
+#practice h3{
+  border-left: 7.5px solid #EAB46D;
+  padding:7.5px;
+}
 
 
 
