--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -190,6 +190,16 @@ border:1px solid #000000;
 padding:5px;  
 }
 
+/*td:nth-child(2), td:nth-child(3) {
+text-align: right;  
+} is the long form*/
+td:nth-child(n+2){
+text-align: right;  
+}
+
+tr:hover{
+background-color: rgba(0,0,0,.3);
+}
 
 
 
