Add styling for ordered and nested unordered lists in practice section

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -202,6 +202,13 @@ td:nth-child(n+2){
 text-align: right;  
 }
 
+#practice ol{
+  list-style-type: lower-roman;
+}
+
+#practice ul ul{
+  color: red;
+}
 
 
 
